k8s/service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: service-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      name: python-app
      labels:
        app: app
    spec:
      containers:
        - image: app-hw
          imagePullPolicy: IfNotPresent
          name: app-service
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: python-app
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 8080
  selector:
    app: app
