k8s/egress.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: egressgateway
spec:
  selector:
    app: istio-egressgateway
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - httpbin.org
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: egress-gateway
spec:
  hosts:
    - httpbin.org
  gateways:
    - mesh
    - egressgateway
  http:
    - match:
        - gateways:
            - mesh
          port: 80
      route:
        - destination:
            host: istio-egressgateway.istio-system.svc.cluster.local
            port:
              number: 80
    - match:
        - gateways:
            - egressgateway
          port: 80
      route:
        - destination:
            host: httpbin.org
            port:
              number: 80
          weight: 100
---
apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  name: api
spec:
  hosts:
    - httpbin.org
  ports:
    - number: 80
      name: http-port
      protocol: HTTP
  resolution: DNS
